# V-GIB

./: ADDON_MANIFEST.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESCRIPTION.md  LICENSE  MANIFEST.md  Makefile  PATCH_INSTRUCTIONS.md  README.md  README_PATCH.md  SECURITY.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  syntax_check_report.txt  train_cifar_geom.py  vib_vgib_sanity_checks.py
docs/: API_QUICKSTART.md  INDUSTRY_READINESS.md  MODEL_CARD.md  NOTES_FOR_MANUSCRIPT.md  RELEASE_CHECKLIST.md  REPOSITORY_AUDIT.md  REPRODUCIBILITY.md  RESULTS_SCHEMA.md
examples/: minimal_geometry_api.py  result_loading_example.py
legacy/: train_cifar_geom.py  untitled7_do_not_publish.py  vib_vgib_sanity_checks.py  vib_vgib_sanity_checks_legacy.py
scripts/: plot_validation.py  run_cifar_vgg_vgib.py  run_complete_validation.py  vgib_doctor.py  vgib_plots.py  vgib_release_manifest.py  vgib_repository_audit.py  vgib_result_gate.py  vgib_smoke_runner.py
src/: vgib_experiments.py  vgib_real_benchmarks.py
src/vgib/: __init__.py  geometry.py  release.py  reporting.py  reproducibility.py
tests/: test_geometry_utilities.py  test_reporting_utilities.py  test_repository_metadata.py  test_scripts_compile_industry.py  test_static_syntax.py
tools/: verify_syntax.py
