[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vgib"
version = "0.1.0"
description = "Variational Geometric Information Bottleneck experiments and diagnostics"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Ronald Katende"}
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "scikit-learn>=1.3",
  "torch>=2.1",
  "torchvision>=0.16",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
